--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Test</title>
 </head>
 <body>
+    <form action="javascript:sendEmail()">
+    <input type="text" name="name" id="name" placeholder="ادخل الاسم" required>
+    <br>
+    <input type="text" name="msg" id="msg" placeholder="ادخل رسالة" required>
+    <br>
+    <input type="submit" value="ارسال">
+</form>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="index.js"></script>
 </body>
